<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:padding="10dip"
    android:background="@drawable/whitewallpaper">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:src="@drawable/logsoltransparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.42"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1.03" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/username" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:password="false"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="10"
            android:password="true"
            android:singleLine="true" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1.03" />
    </LinearLayout>

    <LinearLayout
       android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_weight="0.38"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_weight="0.11"
            android:background="@drawable/buttonborder"
            android:text="@string/loginIn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancel_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:text="@string/cancel"
            android:textColor="@color/brown" />

         <!-- #55000000 -->
    </LinearLayout>

</LinearLayout>