<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:background="@drawable/whitewallpaper"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:src="@drawable/logtransparent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:gravity="center|center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:text="@string/friendUsername" />

        <EditText
            android:id="@+id/newFriendUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:clickable="true"
            android:ems="10"
            android:padding="10dip"
            android:password="false"
            android:singleLine="true" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:layout_weight="0.38"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/addFriend"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_weight="0.39"
            android:background="@drawable/buttonborder"
            android:text="@string/add"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="91dp"
            android:layout_height="49dp"
            android:layout_weight="0.14"
            android:text="@string/cancel"
            android:textColor="@color/brown" />
    </LinearLayout>

</LinearLayout>